added secrets api as a service - gets connection string from AWS secrets manager

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "express": "^5.1.0",
     "serverless-http": "^3.2.0"
   }
